@@ -38,8 +38,10 @@ class GUI_API_EXPORT SqlQueryItemDelegate : public QStyledItemDelegate
         mutable QHash<SqlQueryModel*, QComboBox*> modelToFkCombo;
         mutable QHash<SqlQueryModel*, QVariant> modelToFkInitialValue;
 
+        static bool warnedAboutHugeContents;
         static const qlonglong MAX_ROWS_FOR_FK = 10000L;
         static const int CELL_LENGTH_LIMIT = 30;
+        static const int HUGE_CONTENTS_WARNING_LIMIT = pow(2, 16) / 2 - 1;
 
     private slots:
         void fkDataReady();
