@@ -246,7 +246,7 @@ protected:
          * Having this set to 10000 gives about 290 MB of memory consumption
          * while having 30 columns and 1000 result rows loaded, all with 10000 bytes.
          */
-        static const int cellDataLengthLimit = 10000;
+        static const int cellDataLengthLimit = 100;
 
     private:
         struct TableDetails
